# infra

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  GOALS.md  LEGEND.md  LICENSE  MAP.md  PHILOSOPHY.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  REPO_RULES.md  SECURITY.md  capabilities.json  mcp_config.md  runbooks.json  tool_catalog.json  tool_contracts.json
ai/: context_index.json  protocol.yaml
docs/: AGENT_PLAYBOOK.md  DOC_STYLE.md  INTEGRATION.md  PROOFS.md  RECIPES.md  RUNBOOK.md
docs/contracts/: docs_format_v1.md  policy_v1.md  tool_bus_v1.md
src/: app.rs  cli.rs  constants.rs  lib.rs  main.rs
src/errors/: contract_error.rs  mcp_error.rs  mod.rs  tool_error.rs
src/managers/: alias.rs  api.rs  artifacts.rs  audit.rs  capability.rs  context.rs  env.rs  evidence.rs  intent.rs  jobs.rs  mod.rs  operation.rs  policy.rs  postgres.rs  preset.rs  profile.rs  project.rs  receipt.rs  repo.rs  runbook.rs  ssh.rs  state.rs  target.rs  vault.rs  (+1 more)
tests/: baseline_tool.rs  capability_manifest.rs  cli_smoke.rs  context_derived.rs  effective_input_validation.rs  installed_defaults.rs  intent_confirm.rs  intent_execute.rs  local_manager.rs  operation_manager.rs  policy_manager.rs  portable_bundled_defaults.rs  profile_manager.rs  receipt_manager.rs  runbook_effects.rs  sqlite_store_migration.rs  sqlite_store_persistence.rs  stdio_idle.rs  target_manager.rs  tool_aliases.rs  tool_catalog_visibility.rs  tool_effects.rs  workspace_summary.rs
tools/: baseline  context  doctor.plan  gate  gate-code  gate-docs  gate.plan  parity  smoke  sync-global-infra-skill
(+93 files in other folders)
