[package]
name = "infra"
version = "7.0.1"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.21"
bb8 = "0.8"
bb8-postgres = "0.8"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
filetime = "0.2"
futures = "0.3"
hex = "0.4"
jsonschema = "0.17"
once_cell = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
ssh2 = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
walkdir = "2"
